# flathub-stats

./: Cargo.toml  README.md
.github/workflows/: flatpak.yml  release.yml  rust.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/core/: mod.rs
cli/src/core/sqlite/: mod.rs
cli/src/core/utils/: mod.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/config/: mod.rs  project_dirs.rs
common/src/sqlite/: mod.rs
packaging/flatpak/: com.elxreno.flathub-stats.yml  generated-sources.json
packaging/rpm/: flathub-stats.spec  generate-vendored-sources.sh
src/: core.rs  main.rs
src/core/: config.rs  mod.rs  structs.rs
src/core/config/: mod.rs  project_dirs.rs
src/core/sqlite/: mod.rs
src/core/structs/: mod.rs
src/core/utils/: mod.rs
