[package]
name = "flathub-stats"
version = "0.1.0"
authors = ["ElXreno <elxreno@gmail.com>"]
license = "MPL-2.0"
edition = "2018"

# Profiles
[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
futures = { version = "0.3.5", features = ["thread-pool"] }
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
tokio = { version = "0.2.21", features = ["full"] }

chrono = "0.4.12"
clap = "2.33.1"
directories = "3.0.0"
lazy_static = "1.4.0"
log = "0.4.8"
rusqlite = "0.23.1"
serde = "1.0.114"
serde_json = "1.0.56"