[package]
name = "flathub-stats-cli"
version = "0.2.1"
authors = ["ElXreno <elxreno@gmail.com>"]
license = "MPL-2.0"
edition = "2018"

[[bin]]
name = "flathub-stats"
path = "src/main.rs"

[dependencies]
common = { package = "flathub-stats-common", path = "../common" }

futures = { version = "0.3.8", features = ["thread-pool"] }
reqwest = { version = "0.10.10", features = ["blocking", "json"] }
tokio = { version = "1.8.4", features = ["full"] }

clap = "2.33.3"
chrono = "0.4.19"
log = "0.4.11"
serde = { version="1.0.118", features = ["derive"] }
serde_json = "1.0.60"
