[package]
name = "flathub-stats-common"
version = "0.1.0"
authors = ["ElXreno <elxreno@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.24.2"
chrono = "0.4.19"
directories = "3.0.1"
lazy_static = "1.4.0"
log = "0.4.11"